// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.js render default 1`] = `""`;

exports[`Order.js render with data 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      some
    </span>
    <span
      id="date"
    >
      4 августа, чт, 2021 год
    </span>
  </div>
  <div
    className="Order-items"
  />
</div>
`;

exports[`Order.js render with data and items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      some
    </span>
    <span
      id="date"
    >
      4 августа, чт, 2021 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      1
    </div>
    <div
      className="Order-item"
      key="1"
    >
      2
    </div>
    <div
      className="Order-item"
      key="2"
    >
      3
    </div>
    <div
      className="Order-item"
      key="3"
    >
      4
    </div>
  </div>
</div>
`;

exports[`Order.js render with no date 1`] = `""`;

exports[`Order.js render with no shop 1`] = `""`;

exports[`Order.js render without shop and date 1`] = `""`;
